<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecordEngine3.0</string>
    <string name="error_player">initFail</string>
    <string name="volume_beat">Volume Beat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="h_t_th">Sing</string>
    <string name="c_i_t_hi_u_ng">Create Effect</string>
    <string name="k_ch_ho_t_microphone">Enable Microphone</string>
    <string name="turn_off_mic">Disable Microphone</string>
    <string name="quay_l_i">Back</string>
    <string name="l_u_preset">Save Preset</string>
    <string name="echo">Echo</string>
    <string name="dry">Dry</string>
    <string name="reverb">Reverb</string>
    <string name="eq_3_band">EQ 3 Band</string>
    <string name="compressor">Compressor</string>
    <string name="remote">Remote</string>
    <string name="user_id_enter_hint">Nhập UserID</string>
    <string name="y_l_logger_n">Đây là logger nè</string>
    <string name="login">Go</string>
    <string name="channel_id">Nhập channel ID</string>
    <string name="connect">Go</string>
    <string name="line_seeker">Seeker</string>
    <string name="start">Connect to Server</string>

</resources>
