<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="vn.soft.dc.recordengine30.RemoteActivity">

    <TextView
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/start"
        android:textColor="@color/colorAccent"
        android:textSize="13sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/edUserID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_item_home_white"
                android:digits="0123456789"
                android:hint="@string/user_id_enter_hint"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/edChannel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_item_home_white"
                android:digits="0123456789"
                android:hint="@string/channel_id"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btnChannel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/connect"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/edSeeker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border_item_home_white"
                android:digits="0123456789"
                android:hint="@string/line_seeker"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/btnSeeker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/connect"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/tvLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/y_l_logger_n"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp" />

</LinearLayout>
